--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,9 @@ h1 {
     color: white;
 }
 
-h3 {
-    font-size: 40px;
+h3, h2 {
+    font-size: 30px;
+    color: white;
 }
 
 main {
@@ -32,7 +33,9 @@ main {
 } */
 
 
-
+#aside {
+    margin-top: 40px;
+}
 
 
 #city-heading {
@@ -40,7 +43,7 @@ main {
 }
 
 #five-day-forcast {
-    margin-left: 23px;
+    margin-left: 15px;
 }
 
 #fiveday-header {
@@ -101,6 +104,8 @@ main {
     color: white;
     margin-top: 10px;
     width: 190px;
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(143,168,227,1) 100%);
 }
 
 #search-heading {
